# vnpforth

./: AUTHORS  Makefile.in  Makefile.inc.in  README  README.md  configure  configure.in  vnpforth-1.5.lsm  vnpforth-1.5.spec
compiler/: Makefile  cmdline.cc  cmdline.h  codegen.cc  compiler.cc  data.cc  data.h  dattable.cc  dattable.h  forth.cc  forth.l  forth.output  forth.tab.cc  forth.tab.hh  forth.y  forthc.1  mangler.cc  mangler.h  opcode.cc  opcode.h  operand.h  optable.cc  optable.h  optimize.cc  options.h  parser.cc  parser.h  program.cc  program.h  register.h  srcfile.cc  srcfile.h  stack.h  symbol.cc  symbol.h  symtable.cc  symtable.h  util.h
compiler/testsuite/: Makefile  split.awk  tester  testsuite.ft
demos/: Makefile  cat.ft  features.ft  logname.ft  mv.ft  printenv.ft  reimann.c  reimann_.ft  rm.ft  shell.ft  sleep.ft
runtime/: Makefile  _dlmain.ft  alloc.ft  cclink.ft  cells.ft  compare.ft  compat.ft  coreio.ft  dstack.ft  environ.ft  errno.ft  except.ft  extsyscl.ft  float.ft  floatio.ft  forthlib.h.m4  forthrt1.ft  include.awk  io.ft  libdoc.awk  libforth.3.m4  libheadr.awk  libhpatc.awk  libnames.awk  libtabls.awk  logic.ft  loop.ft  maths.ft  memory.ft  perror.ft  procenv.ft  rstack.ft  stack.ft  strings.ft  syscall.ft  syscalls.ft  tools.ft
runtime/testsuite/: Makefile  core.ft  environ.ft  tester.ft
