dnl vi: set ts=8 shiftwidth=8 noexpandtab:
dnl
dnl VNPForth - Compiled native Forth for x86 Linux
dnl Copyright (C) 2005-2013  Simon Baldwin (simon_baldwin@yahoo.com)
dnl
dnl This program is free software; you can redistribute it and/or
dnl modify it under the terms of the GNU General Public License
dnl as published by the Free Software Foundation; either version 2
dnl of the License, or (at your option) any later version.
dnl
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.
dnl
dnl You should have received a copy of the GNU General Public License
dnl along with this program; if not, write to the Free Software
dnl Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
dnl

AC_INIT(compiler/compiler.cc)

AC_PROG_CC
AC_PROG_YACC
test -z "$ac_cv_prog_YACC" && AC_MSG_WARN([Unable to locate 'bison' or 'yacc'.
           You will only need this if you modify a '.y' file.])
AC_PROG_LEX
test -z "$ac_cv_prog_LEX" && AC_MSG_WARN([Unable to locate 'flex' or 'lex'.
           You will only need this if you modify a '.l' file.])
AC_PROG_AWK
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_PATH_PROG(GZIP, gzip, ,)
test -z "$GZIP" && AC_ERROR([Unable to locate 'gzip'.])
AC_SUBST(GZIP)

AC_OUTPUT(Makefile.inc Makefile)
